--- a/signup.html
+++ b/signup.html
@@ -20,10 +20,10 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="signup.html">Sign Up</a>
+                    <a href="signup.html" class="active">Sign Up</a>
                 </li>
                 <li>
-                    <a href="gallery.html" class="active">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
                     <a href="index.html">Home</a>
@@ -32,16 +32,8 @@
         </nav>
     </header>
 
-    <section id="photos">
-        <img src="assets/images/athletes.jpg" alt="Two athletes running together">
-        <img src="assets/images/girls.jpg" alt="Three girls at charity paint running festival">
-        <img src="assets/images/runner3.jpg" alt="Solo male runner jogging on beach">
-        <img src="assets/images/man.jpg" alt="Man at charity paint running festival">
-        <img src="assets/images/runner1.jpg" alt="Solo female runner jogging through phoenix park">
-        <img src="assets/images/runner2.jpg" alt="Runners competing in marathon">
-        <img src="assets/images/runner4.jpg" alt="Solo female runner jogging on a beach">
-        <img src="assets/images/running_gang.jpg" alt="Large group of runners taking part in a marathon on a rainy day">
-        <img src="assets/images/mud-run.jpg" alt="Two women runners taking part a muddy selfie after the Mud Runners Championship">
+    <section>
+
     </section>
 
     <footer>
