Add form and input fields

--- a/signup.html
+++ b/signup.html
@@ -32,8 +32,24 @@
         </nav>
     </header>
 
-    <section>
-
+    <section class="form-section">
+        <form action="https://formdump.codeinstitute.net/" method="POST">
+            <h2>Let's get you signed up!</h2>
+            <label for="fname">First Name</label>
+            <input id="fname" type="text" name="first_name" required>
+            <label for="lname">Last Name</label>
+            <input id="lname" type="text" name="last_name" required>
+            <label for="email">Email Address</label>
+            <input id="email" type="email" name="email_address" required>
+            <label for="road">Road</label>
+            <input type="radio" id="road" name="running_preference" value="road" required>
+            <label for="trail">Trail</label>
+            <input type="radio" id="trail" name="running_preference" value="trail">
+            <label for="both">Both</label>
+            <input type="radio" id="both" name="running_preference" value="both">
+            <br>
+            <input type="submit" value="Let's Run!">
+        </form>
     </section>
 
     <footer>
