Add page background and style form and fields

--- a/signup.html
+++ b/signup.html
@@ -33,14 +33,14 @@
     </header>
 
     <section class="form-section">
-        <form action="https://formdump.codeinstitute.net/" method="POST">
-            <h2>Let's get you signed up!</h2>
+        <form action="https://formdump.codeinstitute.net/" method="POST" class="signup-form">
+            <h2>Let's get you signed up! <i class="fas fa-heartbeat"></i></h2>
             <label for="fname">First Name</label>
-            <input id="fname" type="text" name="first_name" required>
+            <input id="fname" type="text" name="first_name" required class="text-input">
             <label for="lname">Last Name</label>
-            <input id="lname" type="text" name="last_name" required>
+            <input id="lname" type="text" name="last_name" required class="text-input">
             <label for="email">Email Address</label>
-            <input id="email" type="email" name="email_address" required>
+            <input id="email" type="email" name="email_address" required class="text-input">
             <label for="road">Road</label>
             <input type="radio" id="road" name="running_preference" value="road" required>
             <label for="trail">Trail</label>
@@ -48,7 +48,7 @@
             <label for="both">Both</label>
             <input type="radio" id="both" name="running_preference" value="both">
             <br>
-            <input type="submit" value="Let's Run!">
+            <input type="submit" value="Let's Run!" class="join-button">
         </form>
     </section>
 
