--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="signup.html">Sign Up</a>
                 </li>
                 <li>
-                    <a href="gallery.html">Gallery</a>
+                    <a href="gallery1.html">Gallery</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
